refactor section 5 again again and again

--- a/literature.bib
+++ b/literature.bib
@@ -247,6 +247,24 @@
   publisher={IEEE}
 }
 
+@article{goldberg2011maximum,
+  title={Maximum flows by incremental breadth-first search},
+  author={Goldberg, Andrew and Hed, Sagi and Kaplan, Haim and Tarjan, Robert and Werneck, Renato},
+  journal={Algorithms--ESA 2011},
+  pages={457--468},
+  year={2011},
+  publisher={Springer}
+}
+
+@incollection{goldberg2015faster,
+  title={Faster and more dynamic maximum flow by incremental breadth-first search},
+  author={Goldberg, Andrew V and Hed, Sagi and Kaplan, Haim and Kohli, Pushmeet and Tarjan, Robert E and Werneck, Renato F},
+  booktitle={Algorithms-ESA 2015},
+  pages={619--630},
+  year={2015},
+  publisher={Springer}
+}
+
 @article{ihler1993modeling,
   title={{Modeling Hypergraphs by Graphs with the same Mincut Properties}},
   author={Ihler, Edmund and Wagner, Dorothea and Wagner, Frank},
