--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -209,6 +209,8 @@ Karlsruhe, den 22.12.2017
 \vspace*{0pt}\vfill
 
 \selectlanguage{english}
+\addto\extrasenglish{\def\figureautorefname{Fig.}}
+
 \begin{abstract}
 \centerline{\textbf{Abstract}}
 
